# CoreCppMeetup-2024-05

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CompilerSettings.cmake
include/: CMakeLists.txt  Complex.h  MyString.h  MyType.h
slides/: Printing.pptx
src/: MyString.cpp  MyType.cpp  main.cpp
